--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,317 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Two
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<!-- 1 -->
 
-<ion-content></ion-content>
+<!-- <ion-content padding>
+    <ion-grid>
+      <ion-row>
+        <ion-col>        
+                    <div text-center>
+                        <img width="180px" src="/assets/img/dbt2.png">
+                    </div>          
+        </ion-col>
+      </ion-row>
+      <ion-row>
+          <ion-col>
+                      <div text-center>
+                          <h2>Find out your risk, do the test!</h2>   
+                      </div>  
+          </ion-col>          
+        </ion-row>
+        <ion-row>
+            <ion-col>
+                <ion-button color="naranja"expand="block">Start Test</ion-button>            
+            </ion-col>          
+          </ion-row>
+    </ion-grid>    
+  </ion-content> -->
+
+<!-- 2 -->
+ <!--  <ion-content padding>
+    <ion-grid>
+      <ion-row align-item-center>
+        <ion-col>        
+                    <div text-center>
+                      <h2>Gender:</h2>
+                    </div>          
+        </ion-col>
+      </ion-row>
+      <ion-row align-item-center>
+          <ion-col text-center>
+                     
+                        <ion-button>Female</ion-button>  
+                    
+          </ion-col>          
+        </ion-row>
+        <ion-row align-item-center>
+            <ion-col text-center>
+              <ion-button>
+               Male
+           </ion-button>           
+            </ion-col>          
+          </ion-row>
+    </ion-grid>    
+  </ion-content> -->
+
+  <!-- 3 -->
+  <!-- <ion-content padding>
+    <ion-grid>
+      <ion-row align-item-center>
+        <ion-col>        
+                    <div text-center>
+                      <h2>Age:</h2>
+                    </div>          
+        </ion-col>
+      </ion-row>
+      <ion-row align-item-center>
+          <ion-col text-center>
+                     
+                        <ion-button> Less than 45 </ion-button>  
+                    
+          </ion-col>          
+        </ion-row>
+        <ion-row align-item-center>
+            <ion-col text-center>
+              <ion-button>
+               45 - 54
+           </ion-button>           
+            </ion-col>          
+          </ion-row>
+          <ion-row align-item-center>
+            <ion-col text-center>
+              <ion-button>
+               55 - 64
+           </ion-button>           
+            </ion-col>          
+          </ion-row>
+          <ion-row align-item-center>
+            <ion-col text-center>
+              <ion-button>
+               More than 64
+           </ion-button>           
+            </ion-col>          
+          </ion-row>
+    </ion-grid>    
+  </ion-content> -->
+
+    <!-- 4 -->
+<!--   <ion-content padding>
+    <ion-grid>
+      <ion-row align-item-center>
+        <ion-col>        
+                    <div text-center>
+                      <h2>BMI (Kg/m<sup>2</sup>):</h2>
+                    </div>          
+        </ion-col>
+      </ion-row>
+      <ion-row align-item-center>
+          <ion-col text-center>
+                     
+                        <ion-button> Less than 25 </ion-button>  
+                    
+          </ion-col>          
+        </ion-row>
+        <ion-row align-item-center>
+            <ion-col text-center>
+              <ion-button>
+               25 - 30
+           </ion-button>           
+            </ion-col>          
+          </ion-row>
+          
+          <ion-row align-item-center>
+            <ion-col text-center>
+              <ion-button>
+               More than 30
+           </ion-button>           
+            </ion-col>          
+          </ion-row>
+    </ion-grid>    
+  </ion-content> -->
+
+    <!-- 5 -->
+ <!--  <ion-content padding>
+    <ion-grid>
+      <ion-row align-item-center>
+        <ion-col>        
+                    <div text-center>
+                      <h2>Waist<br/>
+                        Circumference(cm):</h2>
+                    </div>          
+        </ion-col>
+      </ion-row>
+      <ion-row align-item-center>
+          <ion-col text-center>
+                     
+                        <ion-button> Less than 80 </ion-button>  
+                    
+          </ion-col>          
+        </ion-row>
+        <ion-row align-item-center>
+            <ion-col text-center>
+              <ion-button>
+               80 - 87
+           </ion-button>           
+            </ion-col>          
+          </ion-row>
+          
+          <ion-row align-item-center>
+            <ion-col text-center>
+              <ion-button>
+               More than 87
+           </ion-button>           
+            </ion-col>          
+          </ion-row>
+    </ion-grid>    
+  </ion-content> -->
+
+  <!-- 6 -->
+  <!-- <ion-content padding>
+    <ion-grid>
+      <ion-row align-item-center>
+        <ion-col>        
+          <div text-center>
+            <h2>Use blood measure<br/>
+              medication:</h2>
+          </div>           
+        </ion-col>
+      </ion-row>
+      <ion-row align-item-center>
+          <ion-col text-center>
+                     
+                        <ion-button>Yes</ion-button>  
+                    
+          </ion-col>          
+        </ion-row>
+        <ion-row align-item-center>
+            <ion-col text-center>
+              <ion-button>
+               No
+           </ion-button>           
+            </ion-col>          
+          </ion-row>
+    </ion-grid>    
+  </ion-content> -->
+
+    <!-- 7 -->
+  <!-- <ion-content padding>
+    <ion-grid>
+      <ion-row align-item-center>
+        <ion-col>        
+          <div text-center>
+            <h2>History of high<br/>
+              blood glucose:</h2>
+          </div>           
+        </ion-col>
+      </ion-row>
+      <ion-row align-item-center>
+          <ion-col text-center>
+                     
+                        <ion-button>Yes</ion-button>  
+                    
+          </ion-col>          
+        </ion-row>
+        <ion-row align-item-center>
+            <ion-col text-center>
+              <ion-button>
+               No
+           </ion-button>           
+            </ion-col>          
+          </ion-row>
+    </ion-grid>    
+  </ion-content> -->
+
+   <!-- 8 -->
+  <!-- <ion-content padding>
+    <ion-grid>
+      <ion-row align-item-center>
+        <ion-col>        
+          <div text-center>
+            <h2>Physical Activity:</h2>
+          </div>           
+        </ion-col>
+      </ion-row>
+      <ion-row align-item-center>
+          <ion-col text-center>
+                     
+                        <ion-button>
+                          Less than<br/>
+                        4 hour per week
+                        </ion-button>  
+                    
+          </ion-col>          
+        </ion-row>
+        <ion-row align-item-center>
+            <ion-col text-center>
+                <ion-button>
+                    At least<br/>
+                  4 hour per week
+                  </ion-button>             
+            </ion-col>          
+          </ion-row>
+    </ion-grid>    
+  </ion-content> -->
+
+  <!-- 9 -->
+  <!-- <ion-content padding>
+    <ion-grid>
+      <ion-row align-item-center>
+        <ion-col>        
+          <div text-center>
+            <h2>Daily consumption of<br/>
+              fruits or vegetables:</h2>
+          </div>           
+        </ion-col>
+      </ion-row>
+      <ion-row align-item-center>
+          <ion-col text-center>
+                     
+                        <ion-button>Yes</ion-button>  
+                    
+          </ion-col>          
+        </ion-row>
+        <ion-row align-item-center>
+            <ion-col text-center>
+              <ion-button>
+               No
+           </ion-button>           
+            </ion-col>          
+          </ion-row>
+    </ion-grid>    
+  </ion-content> -->
+
+     <!-- 10 -->
+  <ion-content padding>
+    <ion-grid>
+      <ion-row align-item-center>
+        <ion-col>        
+                    <div text-center>
+                      <h2>Family history of<br/>
+                        diabetes:</h2>
+                    </div>          
+        </ion-col>
+      </ion-row>
+      <ion-row align-item-center>
+          <ion-col text-center>
+                     
+                        <ion-button> No </ion-button>  
+                    
+          </ion-col>          
+        </ion-row>
+        <ion-row align-item-center>
+            <ion-col text-center>
+              <ion-button>
+               2nd degree<br/>
+               relative
+           </ion-button>           
+            </ion-col>          
+          </ion-row>
+          
+          <ion-row align-item-center>
+            <ion-col text-center>
+              <ion-button>
+                  1st degree<br/>
+                  relative
+           </ion-button>           
+            </ion-col>          
+          </ion-row>
+    </ion-grid>    
+  </ion-content>
