--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,25 @@
 <ion-tabs>
-
-  <ion-tab-bar slot="bottom">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title text-center>
+        Diab e-test
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-tab-bar slot="bottom" color="primary">
     <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-icon name="person"></ion-icon>
+      <ion-label>Profile</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-icon name="list-box"></ion-icon>
+      <ion-label>Test</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+      <ion-icon name="restaurant"></ion-icon>
+      <ion-label>Healthy Food</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
