--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -37,7 +37,7 @@
       <ion-row align-item-center>
           <ion-col text-center>
                      
-                        <ion-button>Female</ion-button>  
+                        <ion-button (click)= "female()">Female</ion-button>  
                     
           </ion-col>          
         </ion-row>
