Cambios página nueva para el test

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,6 +1,6 @@
 <!-- 1 -->
 
-<!-- <ion-content padding>
+<ion-content padding>
     <ion-grid>
       <ion-row>
         <ion-col>        
@@ -18,38 +18,13 @@
         </ion-row>
         <ion-row>
             <ion-col>
-                <ion-button color="naranja"expand="block">Start Test</ion-button>            
+                <ion-button color="naranja"expand="block" (click)="starttest()">Start Test</ion-button>            
             </ion-col>          
           </ion-row>
     </ion-grid>    
-  </ion-content> -->
+  </ion-content>
 
-<!-- 2 -->
- <!--  <ion-content padding>
-    <ion-grid>
-      <ion-row align-item-center>
-        <ion-col>        
-                    <div text-center>
-                      <h2>Gender:</h2>
-                    </div>          
-        </ion-col>
-      </ion-row>
-      <ion-row align-item-center>
-          <ion-col text-center>
-                     
-                        <ion-button>Female</ion-button>  
-                    
-          </ion-col>          
-        </ion-row>
-        <ion-row align-item-center>
-            <ion-col text-center>
-              <ion-button>
-               Male
-           </ion-button>           
-            </ion-col>          
-          </ion-row>
-    </ion-grid>    
-  </ion-content> -->
+
 
   <!-- 3 -->
   <!-- <ion-content padding>
@@ -279,7 +254,7 @@
   </ion-content> -->
 
      <!-- 10 -->
-  <ion-content padding>
+  <!-- <ion-content padding>
     <ion-grid>
       <ion-row align-item-center>
         <ion-col>        
@@ -314,4 +289,4 @@
             </ion-col>          
           </ion-row>
     </ion-grid>    
-  </ion-content>
+  </ion-content> -->
