--- a/src/app/test/test.page.html
+++ b/src/app/test/test.page.html
@@ -437,7 +437,13 @@
                              
             </ion-col>
           </ion-row>
-
+          <ion-row align-item-center>
+            <ion-col text-center>
+              <ion-button (click)="finishtest()">
+                  OK
+           </ion-button>           
+            </ion-col>          
+          </ion-row>
       </ng-template>
 
     </ion-grid>    
