--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -4,6 +4,9 @@
       <ion-title text-center>
         Diab e-test
       </ion-title>
+      <ion-button (click)="logout()" slot="end">
+          <ion-icon slot="icon-only" name="power" size="large"></ion-icon>
+      </ion-button>
     </ion-toolbar>
   </ion-header>
   <ion-tab-bar slot="bottom" color="primary">
@@ -14,12 +17,12 @@
 
     <ion-tab-button tab="tab2">
       <ion-icon name="list-box"></ion-icon>
-      <ion-label>Test</ion-label>
+      <ion-label>News</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="restaurant"></ion-icon>
-      <ion-label>Healthy Food</ion-label>
+      <ion-icon name="heart"></ion-icon>
+      <ion-label>Lifestyle</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
