--- a/src/app/info/info.page.html
+++ b/src/app/info/info.page.html
@@ -17,7 +17,7 @@
   <ion-row>   
 <ion-col>
     <div> 
-        <h6>Diab e-test is an initiative that seeks to make people aware of the risk they have of developing type 2 diabetes. Here you will also find information and tips to lead a healthy life and avoid the development of this disease.</h6>
+        <h6>Diab e-test Es una iniciativa que busca informar y concienciar a los ciudadanos sobre el riesgo de padecer diabetes tipo 2. En esta plataforma también se podrá encontrar información y trucos para seguir un estilo de vida saludable, y así evitar desarrollar esta enfermedad.</h6>
     </div>
 </ion-col>
   </ion-row>  
