--- a/src/app/info/info.page.html
+++ b/src/app/info/info.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="naranja">
     <ion-title text-center>
       Diab e-test
     </ion-title>
@@ -36,7 +36,7 @@
         </ion-row>
         <ion-row>
             <ion-col>
-                <ion-button color="naranja"expand="block" (click)="goTest()">OK</ion-button>            
+                <ion-button color="naranja" expand="block" (click)="goTest()">OK</ion-button>            
             </ion-col>          
           </ion-row>
     </ion-grid> 
