--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -12,17 +12,17 @@
   <ion-tab-bar slot="bottom" color="primary">
     <ion-tab-button tab="tab1">
       <ion-icon name="person"></ion-icon>
-      <ion-label>Profile</ion-label>
+      <ion-label>Perfil</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
       <ion-icon name="list-box"></ion-icon>
-      <ion-label>News</ion-label>
+      <ion-label>Noticias</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
       <ion-icon name="heart"></ion-icon>
-      <ion-label>Lifestyle</ion-label>
+      <ion-label>Estilo de Vida</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
