--- a/src/app/test/test.page.html
+++ b/src/app/test/test.page.html
@@ -105,21 +105,14 @@
       </ion-row>
       <ion-row align-item-center>
         <ion-col text-center>
-          <ion-button (click)="bmi1()" [ngStyle]="{'color':value_extra === 2? 'orange' : 'white' }"> Less than 25 </ion-button>
+          <ion-label position="floating">Introduzca su altura (m)</ion-label>
+          <ion-input [(ngModel)]="altura"></ion-input>
         </ion-col>
       </ion-row>
       <ion-row align-item-center>
         <ion-col text-center>
-          <ion-button (click)="bmi2()" [ngStyle]="{'color':value === 1? 'orange' : 'white' }">
-            25 - 30
-          </ion-button>
-        </ion-col>
-      </ion-row>
-      <ion-row align-item-center>
-        <ion-col text-center>
-          <ion-button (click)="bmi3()" [ngStyle]="{'color':value === 3? 'orange' : 'white' }">
-            More than 30
-          </ion-button>
+          <ion-label position="floating">Introduzca su peso (Kg)</ion-label>
+          <ion-input [(ngModel)]="peso"></ion-input>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -127,7 +120,7 @@
 
   <!-- <div text-right *ngIf="(value_extra === 2)||(value >= 1)"> -->
       <ion-toolbar align-item-center>
-          <ion-button (click)="nextQuestion()" color="naranja" expand="block" [disabled]="(value_extra !== 2) && (value < 1)">
+          <ion-button (click)="nextQuestion()" color="naranja" expand="block" [disabled]="bmi !== 0">
             Siguiente</ion-button>
           <!-- <ion-icon  size="large" name="arrow-dropright-circle" slot="end" (click)="nextQuestion()"></ion-icon> -->
         </ion-toolbar>
