Final app (ihope)

--- a/src/app/detalle2/detalle2.page.html
+++ b/src/app/detalle2/detalle2.page.html
@@ -8,8 +8,8 @@
   </ion-header>
   
   <ion-content padding>
-    <img size="small" src="https://www.clara.es/medio/2019/04/02/menu-semanal-saludable5_56e25094_1280x961.jpg">
-    <h2>MENU SEMANAL SALUDABLE</h2>
+    <img size="small" src="https://ichef.bbci.co.uk/news/660/cpsprodpb/7A38/production/_103588213_049551797-1.jpg">
+    <h2>MENU SEMANAL MEDITERRÁNEO</h2>
     <p>¿Quieres empezar a comer mejor y además planificar mejor tu dieta? Este menú semanal saludable te va a ayudar (y mucho).</p>
     <h6>Objetivo de la dieta</h6><p>Adquirir hábitos de comida saludable.</p>
     <h6>Duración</h6><p>Mensualmente.</p>
