--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -28,7 +28,7 @@
       <ion-label text-wrap>
           <h3>Recupera la Forma sobre la Bici en ocho semanas</h3>
           <h6><small>8 semanas</small></h6>
-          <p>Con este plan de entrenamiento para principiantes, dos meses bastan para ponerse a tono. Tú marcas el ritmo, pues son ejercicios de intensidad progresiva.</p>
+          <p>Con este plan de entrenamiento, dos meses bastan para ponerse a tono.</p>
         </ion-label>
     </ion-item>
     <ion-item detail>
@@ -36,7 +36,7 @@
         <ion-label text-wrap>
             <h3>Ejercicios básicos para adelgazar en casa</h3>
             <h6><small>12 semanas</small></h6>
-            <p>Si necesitas mejorar tu peso y composición corporal, debes combinar una dieta sana y equilibrada a nivel hormonal con ejercicios para adelgazar y quemar grasa.</p>
+            <p>Si necesitas mejorar tu peso y composición corporal</p>
           </ion-label>
       </ion-item>
   </ion-list>
@@ -48,25 +48,25 @@
     <ion-item class="food" (click)="buttonClick($event)" detail>
         <ion-icon class="food" name="body"></ion-icon>
         <ion-label class="food" text-wrap>
-          <h3 class="food">Menú Semanal Saludable</h3>
+          <h3 class="food">Menú Semanal Mediterráneo</h3>
           <h6><small class="food">7 días</small></h6>
-          <p class="food">El menú semanal saludable más fácil de seguir que vas a encontrar.</p>
+          <p class="food">El menú semanal saludable más fácil de seguir que encontrarás.</p>
         </ion-label>
       </ion-item>
       <ion-item detail>
         <ion-icon name="nutrition"></ion-icon>
         <ion-label text-wrap>
-            <h3>Aprende a incorporar verduras en tus platos para llevar una dieta sana y sabrosa</h3>
+            <h3>Aprende a incorporar verduras en tus platos</h3>
             <h6><small>1 mes</small></h6>
-            <p>¿Quieres empezar a comer sano, pero sólo sabes preparar ensaladas? ¡No te preocupes! Aquí encontrarás una infinidad de nuevas ideas para mantener la línea perfecta y disfrutar en la cocina.</p>
+            <p>¿Quieres empezar a comer sano, pero sólo sabes preparar ensaladas?</p>
           </ion-label>
       </ion-item>
       <ion-item detail>
           <ion-icon name="clipboard"></ion-icon>
           <ion-label text-wrap>
-              <h3>La receta definitiva del auténtico gazpacho andaluz</h3>
+              <h3>Receta del auténtico gazpacho andaluz</h3>
               <h6><small>2 horas</small></h6>
-              <p> Receta ideal para los que quieren aprender a hacer un buen gazpacho andaluz y no un zumo de tomate.</p>
+              <p> Dí adiós al zumo de tomate y disfruta en al cocina.</p>
             </ion-label>
         </ion-item>
   </ion-list>
